// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser: advanced js to xml 1`] = `
"<Keyboard>
  <Name>OptiKey-BoardMaker</Name>
  <Height>40</Height>
  <SymbolMargin>1</SymbolMargin>
  <BorderThickness>0,0,0,0</BorderThickness>
  <DockSize>Full</DockSize>
  <Position>Top</Position>
  <Width>100</Width>
  <HorizontalOffset>0</HorizontalOffset>
  <VerticalOffset>0</VerticalOffset>
  <BackgroundColor>Transparent</BackgroundColor>
  <BorderColor>Transparent</BorderColor>
  <WindowState>Docked</WindowState>
  <Grid>
    <Rows>7</Rows>
    <Cols>12</Cols>
  </Grid>
  <KeyGroup Name=\\"Blue Keys\\" BackgroundColor=\\"Blue\\"/>
  <KeyGroup Name=\\"Red Keys\\" BackgroundColor=\\"Red\\"/>
  <Content>
    <DynamicKey Row=\\"0\\" Col=\\"0\\">
      <Label>~</Label>
      <Text>~</Text>
    </DynamicKey>
    <DynamicKey Row=\\"0\\" Col=\\"1\\">
      <Label>1</Label>
      <Text>1</Text>
    </DynamicKey>
    <DynamicKey Row=\\"0\\" Col=\\"2\\">
      <Label>2</Label>
      <Text>2</Text>
    </DynamicKey>
    <DynamicKey Row=\\"0\\" Col=\\"3\\">
      <Label>3</Label>
      <Text>3</Text>
    </DynamicKey>
    <DynamicKey Row=\\"0\\" Col=\\"4\\">
      <Label>4</Label>
      <Text>4</Text>
    </DynamicKey>
    <DynamicKey Row=\\"0\\" Col=\\"5\\">
      <Label>5</Label>
      <Text>5</Text>
    </DynamicKey>
    <DynamicKey Row=\\"0\\" Col=\\"6\\">
      <Label>6</Label>
      <Text>6</Text>
    </DynamicKey>
    <DynamicKey Row=\\"0\\" Col=\\"7\\">
      <Label>7</Label>
      <Text>7</Text>
    </DynamicKey>
    <DynamicKey Row=\\"0\\" Col=\\"8\\">
      <Label>8</Label>
      <Text>8</Text>
    </DynamicKey>
    <DynamicKey Row=\\"0\\" Col=\\"9\\">
      <Label>9</Label>
      <Text>9</Text>
    </DynamicKey>
    <DynamicKey Row=\\"0\\" Col=\\"10\\">
      <Label>0</Label>
      <Text>0</Text>
    </DynamicKey>
    <DynamicKey Row=\\"0\\" Col=\\"11\\">
      <Symbol>MenuIcon</Symbol>
      <Action>MenuKeyboard</Action>
    </DynamicKey>
    <DynamicKey Row=\\"1\\" Col=\\"0\\">
      <Text>undefined</Text>
    </DynamicKey>
    <DynamicKey Row=\\"1\\" Col=\\"1\\">
      <Label>!</Label>
      <Text>!</Text>
    </DynamicKey>
    <DynamicKey Row=\\"1\\" Col=\\"2\\">
      <Label>?</Label>
      <Text>?</Text>
    </DynamicKey>
    <DynamicKey Row=\\"1\\" Col=\\"3\\">
      <Label>+</Label>
      <Text>+</Text>
    </DynamicKey>
    <DynamicKey Row=\\"1\\" Col=\\"4\\">
      <Label>*</Label>
      <Text>*</Text>
    </DynamicKey>
    <DynamicKey Row=\\"1\\" Col=\\"5\\">
      <Label>%</Label>
      <Text>%</Text>
    </DynamicKey>
    <DynamicKey Row=\\"1\\" Col=\\"6\\">
      <Label>&amp;</Label>
      <Text>&amp;</Text>
    </DynamicKey>
    <DynamicKey Row=\\"1\\" Col=\\"7\\">
      <Label>\\"</Label>
      <Text>\\"</Text>
    </DynamicKey>
    <DynamicKey Row=\\"1\\" Col=\\"8\\">
      <Label>'</Label>
      <Text>'</Text>
    </DynamicKey>
    <DynamicKey Row=\\"1\\" Col=\\"9\\">
      <Label>\`</Label>
      <Text>\`</Text>
    </DynamicKey>
    <DynamicKey Row=\\"1\\" Col=\\"10\\">
      <Label>$</Label>
      <Text>$</Text>
    </DynamicKey>
    <DynamicKey Row=\\"2\\" Col=\\"0\\">
      <Label>/</Label>
      <Text>/</Text>
    </DynamicKey>
    <DynamicKey Row=\\"2\\" Col=\\"1\\">
      <ShiftUpLabel>q</ShiftUpLabel>
      <ShiftDownLabel>Q</ShiftDownLabel>
      <Text>q</Text>
    </DynamicKey>
    <DynamicKey Row=\\"2\\" Col=\\"2\\">
      <ShiftUpLabel>w</ShiftUpLabel>
      <ShiftDownLabel>W</ShiftDownLabel>
      <Text>w</Text>
    </DynamicKey>
    <DynamicKey Row=\\"2\\" Col=\\"3\\">
      <ShiftUpLabel>e</ShiftUpLabel>
      <ShiftDownLabel>E</ShiftDownLabel>
      <Text>e</Text>
    </DynamicKey>
    <DynamicKey Row=\\"2\\" Col=\\"4\\">
      <ShiftUpLabel>r</ShiftUpLabel>
      <ShiftDownLabel>R</ShiftDownLabel>
      <Text>r</Text>
    </DynamicKey>
    <DynamicKey Row=\\"2\\" Col=\\"5\\">
      <ShiftUpLabel>t</ShiftUpLabel>
      <ShiftDownLabel>T</ShiftDownLabel>
      <Text>t</Text>
    </DynamicKey>
    <DynamicKey Row=\\"2\\" Col=\\"6\\">
      <ShiftUpLabel>z</ShiftUpLabel>
      <ShiftDownLabel>Z</ShiftDownLabel>
      <Text>z</Text>
    </DynamicKey>
    <DynamicKey Row=\\"2\\" Col=\\"7\\">
      <ShiftUpLabel>u</ShiftUpLabel>
      <ShiftDownLabel>U</ShiftDownLabel>
      <Text>u</Text>
    </DynamicKey>
    <DynamicKey Row=\\"2\\" Col=\\"8\\">
      <ShiftUpLabel>i</ShiftUpLabel>
      <ShiftDownLabel>I</ShiftDownLabel>
      <Text>i</Text>
    </DynamicKey>
    <DynamicKey Row=\\"2\\" Col=\\"9\\">
      <ShiftUpLabel>o</ShiftUpLabel>
      <ShiftDownLabel>O</ShiftDownLabel>
      <Text>o</Text>
    </DynamicKey>
    <DynamicKey Row=\\"2\\" Col=\\"10\\">
      <ShiftUpLabel>p</ShiftUpLabel>
      <ShiftDownLabel>P</ShiftDownLabel>
      <Text>p</Text>
    </DynamicKey>
    <DynamicKey Row=\\"2\\" Col=\\"11\\">
      <Label>|</Label>
      <Text>|</Text>
    </DynamicKey>
    <DynamicKey Row=\\"3\\" Col=\\"0\\">
      <Label>-</Label>
      <Text>-</Text>
    </DynamicKey>
    <DynamicKey Row=\\"3\\" Col=\\"1\\">
      <Label>_</Label>
      <Text>_</Text>
    </DynamicKey>
    <DynamicKey Row=\\"3\\" Col=\\"2\\">
      <ShiftUpLabel>a</ShiftUpLabel>
      <ShiftDownLabel>A</ShiftDownLabel>
      <Text>a</Text>
    </DynamicKey>
    <DynamicKey Row=\\"3\\" Col=\\"3\\">
      <ShiftUpLabel>s</ShiftUpLabel>
      <ShiftDownLabel>S</ShiftDownLabel>
      <Text>s</Text>
    </DynamicKey>
    <DynamicKey Row=\\"3\\" Col=\\"4\\">
      <ShiftUpLabel>d</ShiftUpLabel>
      <ShiftDownLabel>D</ShiftDownLabel>
      <Text>d</Text>
    </DynamicKey>
    <DynamicKey Row=\\"3\\" Col=\\"5\\">
      <ShiftUpLabel>f</ShiftUpLabel>
      <ShiftDownLabel>F</ShiftDownLabel>
      <Text>f</Text>
    </DynamicKey>
    <DynamicKey Row=\\"3\\" Col=\\"6\\">
      <ShiftUpLabel>g</ShiftUpLabel>
      <ShiftDownLabel>G</ShiftDownLabel>
      <Text>g</Text>
    </DynamicKey>
    <DynamicKey Row=\\"3\\" Col=\\"7\\">
      <ShiftUpLabel>h</ShiftUpLabel>
      <ShiftDownLabel>H</ShiftDownLabel>
      <Text>h</Text>
    </DynamicKey>
    <DynamicKey Row=\\"3\\" Col=\\"8\\">
      <ShiftUpLabel>j</ShiftUpLabel>
      <ShiftDownLabel>J</ShiftDownLabel>
      <Text>j</Text>
    </DynamicKey>
    <DynamicKey Row=\\"3\\" Col=\\"9\\">
      <ShiftUpLabel>k</ShiftUpLabel>
      <ShiftDownLabel>K</ShiftDownLabel>
      <Text>k</Text>
    </DynamicKey>
    <DynamicKey Row=\\"3\\" Col=\\"10\\">
      <ShiftUpLabel>l</ShiftUpLabel>
      <ShiftDownLabel>L</ShiftDownLabel>
      <Text>l</Text>
    </DynamicKey>
    <DynamicKey Row=\\"3\\" Col=\\"11\\">
      <Label>^</Label>
      <Text>^</Text>
    </DynamicKey>
    <DynamicKey Row=\\"4\\" Col=\\"0\\">
      <Symbol>TabIcon</Symbol>
      <Text>&#9;</Text>
      <Text>undefined</Text>
    </DynamicKey>
    <DynamicKey Row=\\"4\\" Col=\\"1\\">
      <Label>&lt;</Label>
      <Text>&lt;</Text>
    </DynamicKey>
    <DynamicKey Row=\\"4\\" Col=\\"2\\">
      <ShiftUpLabel>y</ShiftUpLabel>
      <ShiftDownLabel>Y</ShiftDownLabel>
      <Text>y</Text>
    </DynamicKey>
    <DynamicKey Row=\\"4\\" Col=\\"3\\">
      <ShiftUpLabel>x</ShiftUpLabel>
      <ShiftDownLabel>X</ShiftDownLabel>
      <Text>x</Text>
    </DynamicKey>
    <DynamicKey Row=\\"4\\" Col=\\"4\\">
      <ShiftUpLabel>c</ShiftUpLabel>
      <ShiftDownLabel>C</ShiftDownLabel>
      <Text>c</Text>
    </DynamicKey>
    <DynamicKey Row=\\"4\\" Col=\\"5\\">
      <ShiftUpLabel>v</ShiftUpLabel>
      <ShiftDownLabel>V</ShiftDownLabel>
      <Text>v</Text>
    </DynamicKey>
    <DynamicKey Row=\\"4\\" Col=\\"6\\">
      <ShiftUpLabel>b</ShiftUpLabel>
      <ShiftDownLabel>B</ShiftDownLabel>
      <Text>b</Text>
    </DynamicKey>
    <DynamicKey Row=\\"4\\" Col=\\"7\\">
      <ShiftUpLabel>n</ShiftUpLabel>
      <ShiftDownLabel>N</ShiftDownLabel>
      <Text>n</Text>
    </DynamicKey>
    <DynamicKey Row=\\"4\\" Col=\\"8\\">
      <ShiftUpLabel>m</ShiftUpLabel>
      <ShiftDownLabel>M</ShiftDownLabel>
      <Text>m</Text>
    </DynamicKey>
    <DynamicKey Row=\\"4\\" Col=\\"9\\">
      <Label>@</Label>
      <Text>@</Text>
    </DynamicKey>
    <DynamicKey Row=\\"4\\" Col=\\"10\\">
      <Label>=</Label>
      <Text>=</Text>
    </DynamicKey>
    <DynamicKey Row=\\"4\\" Col=\\"11\\">
      <Label>#</Label>
      <Text>#</Text>
    </DynamicKey>
    <DynamicKey Row=\\"5\\" Col=\\"0\\">
      <Label>Win</Label>
      <Action>LeftWin</Action>
    </DynamicKey>
    <DynamicKey Row=\\"5\\" Col=\\"1\\">
      <Label>&gt;</Label>
      <Text>&gt;</Text>
    </DynamicKey>
    <DynamicKey Row=\\"5\\" Col=\\"2\\">
      <Label>,</Label>
      <Text>,</Text>
    </DynamicKey>
    <DynamicKey Row=\\"5\\" Col=\\"3\\">
      <Label>.</Label>
      <Text>.</Text>
    </DynamicKey>
    <DynamicKey Row=\\"5\\" Col=\\"4\\">
      <Label>(</Label>
      <Text>(</Text>
    </DynamicKey>
    <DynamicKey Row=\\"5\\" Col=\\"5\\">
      <Label>)</Label>
      <Text>)</Text>
    </DynamicKey>
    <DynamicKey Row=\\"5\\" Col=\\"6\\">
      <Label>[</Label>
      <Text>[</Text>
    </DynamicKey>
    <DynamicKey Row=\\"5\\" Col=\\"7\\">
      <Label>]</Label>
      <Text>]</Text>
    </DynamicKey>
    <DynamicKey Row=\\"5\\" Col=\\"8\\">
      <Label>{</Label>
      <Text>{</Text>
    </DynamicKey>
    <DynamicKey Row=\\"5\\" Col=\\"9\\">
      <Label>}</Label>
      <Text>}</Text>
    </DynamicKey>
    <DynamicKey Row=\\"5\\" Col=\\"10\\">
      <Symbol>UpArrowKeyIcon</Symbol>
      <Action>ArrowUp</Action>
    </DynamicKey>
    <DynamicKey Row=\\"5\\" Col=\\"11\\">
      <Label>Esc</Label>
      <Action>Escape</Action>
    </DynamicKey>
    <DynamicKey Row=\\"6\\" Col=\\"0\\">
      <Label>Ctrl</Label>
      <Action>LeftCtrl</Action>
    </DynamicKey>
    <DynamicKey Row=\\"6\\" Col=\\"1\\">
      <Label>Alt</Label>
      <Action>LeftAlt</Action>
    </DynamicKey>
    <DynamicKey Row=\\"6\\" Col=\\"2\\">
      <Label>;</Label>
      <Text>;</Text>
    </DynamicKey>
    <DynamicKey Row=\\"6\\" Col=\\"3\\">
      <Label>:</Label>
      <Text>:</Text>
    </DynamicKey>
    <DynamicKey Row=\\"6\\" Col=\\"4\\">
      <Symbol>ShiftIcon</Symbol>
      <Action>LeftShift</Action>
    </DynamicKey>
    <DynamicKey Row=\\"6\\" Col=\\"5\\" Width=\\"2\\" Height=\\"2\\">
      <Symbol>SpaceIcon</Symbol>
      <Text>&#32;</Text>
      <Text>undefined</Text>
    </DynamicKey>
    <DynamicKey Row=\\"6\\" Col=\\"7\\">
      <Symbol>EnterIcon</Symbol>
      <Text>&#13;</Text>
      <Text>undefined</Text>
    </DynamicKey>
    <DynamicKey Row=\\"6\\" Col=\\"8\\">
      <Symbol>BackOneIcon</Symbol>
      <Action>BackOne</Action>
      <Text>Multi</Text>
      <Action>BackOne</Action>
    </DynamicKey>
    <DynamicKey Row=\\"6\\" Col=\\"9\\">
      <Label>A burst with text</Label>
      <Loop Count=\\"3\\">
        <KeyDown>a</KeyDown>
        <Wait>100</Wait>
        <KeyUp>a</KeyUp>
      </Loop>
      <Text>b</Text>
      <KeyGroup Name=\\"Blue Keys\\"/>
    </DynamicKey>
    <DynamicKey Row=\\"6\\" Col=\\"10\\">
      <Label>BackWithReturnFalse</Label>
      <ChangeKeyboard BackReturnsHere=\\"false\\">HackerKeyboardSymbols2</ChangeKeyboard>
      <KeyGroup Name=\\"Red Keys\\"/>
    </DynamicKey>
    <DynamicKey Row=\\"6\\" Col=\\"11\\" Width=\\"1\\" Height=\\"1\\" BackgroundColor=\\"Blue\\" ForegroundColor=\\"Blue\\" KeyDisabledForeground=\\"Blue\\" KeyDisabledOpacity=\\"1\\" KeyDownBackground=\\"Blue\\" KeyDownForeground=\\"Blue\\" KeyDownOpacity=\\"1\\" Opacity=\\"1\\" AutoScaleToOneKeyWidth=\\"true\\" AutoScaleToOneKeyHeight=\\"true\\" SharedSizeGroup=\\"true\\" UsePersianCompatibilityFont=\\"true\\" UseUnicodeCompatibilityFont=\\"true\\" UseUrduCompatibilityFont=\\"true\\" LockOnTime=\\"500\\" CompletionTime=\\"500,500,500\\">
      <KeyDisabledBackgroud>Blue</KeyDisabledBackgroud>
      <Label>BackWithReturnTrue</Label>
      <ChangeKeyboard BackReturnsHere=\\"true\\">HackerKeyboardSymbols2</ChangeKeyboard>
      <KeyGroup Name=\\"Blue Keys\\"/>
      <KeyGroup Name=\\"Red Keys\\"/>
    </DynamicKey>
  </Content>
</Keyboard>"
`;

exports[`parser: advanced xml to js 1`] = `
Object {
  "Keyboard": Object {
    "BackgroundColor": "Transparent",
    "BorderColor": "Transparent",
    "BorderThickness": "0,0,0,0",
    "Content": Array [
      Object {
        "Col": 0,
        "Label": "~",
        "Row": 0,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "~",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 1,
        "Label": "1",
        "Row": 0,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "1",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 2,
        "Label": "2",
        "Row": 0,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "2",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 3,
        "Label": "3",
        "Row": 0,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "3",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 4,
        "Label": "4",
        "Row": 0,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "4",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 5,
        "Label": "5",
        "Row": 0,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "5",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 6,
        "Label": "6",
        "Row": 0,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "6",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 7,
        "Label": "7",
        "Row": 0,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "7",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 0,
        "Row": 1,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": undefined,
          },
        ],
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 8,
        "Label": "8",
        "Row": 0,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "8",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 1,
        "Label": "!",
        "Row": 1,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "!",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 9,
        "Label": "9",
        "Row": 0,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "9",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 2,
        "Label": "?",
        "Row": 1,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "?",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 10,
        "Label": "0",
        "Row": 0,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "0",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 3,
        "Label": "+",
        "Row": 1,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "+",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 4,
        "Label": "*",
        "Row": 1,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "*",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 11,
        "Row": 0,
        "Symbol": "MenuIcon",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Action",
            "value": "MenuKeyboard",
          },
        ],
        "labelType": "Symbol",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 5,
        "Label": "%",
        "Row": 1,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "%",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 6,
        "Label": "&",
        "Row": 1,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "&",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 0,
        "Label": "/",
        "Row": 2,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "/",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 7,
        "Label": "\\"",
        "Row": 1,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "\\"",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 1,
        "Row": 2,
        "ShiftDownLabel": "Q",
        "ShiftUpLabel": "q",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "q",
          },
        ],
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 8,
        "Label": "'",
        "Row": 1,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "'",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 2,
        "Row": 2,
        "ShiftDownLabel": "W",
        "ShiftUpLabel": "w",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "w",
          },
        ],
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 9,
        "Label": "\`",
        "Row": 1,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "\`",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 10,
        "Label": "$",
        "Row": 1,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "$",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 3,
        "Row": 2,
        "ShiftDownLabel": "E",
        "ShiftUpLabel": "e",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "e",
          },
        ],
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 4,
        "Row": 2,
        "ShiftDownLabel": "R",
        "ShiftUpLabel": "r",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "r",
          },
        ],
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 5,
        "Row": 2,
        "ShiftDownLabel": "T",
        "ShiftUpLabel": "t",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "t",
          },
        ],
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 6,
        "Row": 2,
        "ShiftDownLabel": "Z",
        "ShiftUpLabel": "z",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "z",
          },
        ],
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 0,
        "Label": "-",
        "Row": 3,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "-",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 7,
        "Row": 2,
        "ShiftDownLabel": "U",
        "ShiftUpLabel": "u",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "u",
          },
        ],
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 1,
        "Label": "_",
        "Row": 3,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "_",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 8,
        "Row": 2,
        "ShiftDownLabel": "I",
        "ShiftUpLabel": "i",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "i",
          },
        ],
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 2,
        "Row": 3,
        "ShiftDownLabel": "A",
        "ShiftUpLabel": "a",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "a",
          },
        ],
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 9,
        "Row": 2,
        "ShiftDownLabel": "O",
        "ShiftUpLabel": "o",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "o",
          },
        ],
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 10,
        "Row": 2,
        "ShiftDownLabel": "P",
        "ShiftUpLabel": "p",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "p",
          },
        ],
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 3,
        "Row": 3,
        "ShiftDownLabel": "S",
        "ShiftUpLabel": "s",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "s",
          },
        ],
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 11,
        "Label": "|",
        "Row": 2,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "|",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 4,
        "Row": 3,
        "ShiftDownLabel": "D",
        "ShiftUpLabel": "d",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "d",
          },
        ],
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 5,
        "Row": 3,
        "ShiftDownLabel": "F",
        "ShiftUpLabel": "f",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "f",
          },
        ],
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 6,
        "Row": 3,
        "ShiftDownLabel": "G",
        "ShiftUpLabel": "g",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "g",
          },
        ],
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 7,
        "Row": 3,
        "ShiftDownLabel": "H",
        "ShiftUpLabel": "h",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "h",
          },
        ],
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 0,
        "Row": 4,
        "Symbol": "TabIcon",
        "Text": "&#9;",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": undefined,
          },
        ],
        "labelType": "Symbol",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 8,
        "Row": 3,
        "ShiftDownLabel": "J",
        "ShiftUpLabel": "j",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "j",
          },
        ],
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 1,
        "Label": "<",
        "Row": 4,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "<",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 9,
        "Row": 3,
        "ShiftDownLabel": "K",
        "ShiftUpLabel": "k",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "k",
          },
        ],
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 2,
        "Row": 4,
        "ShiftDownLabel": "Y",
        "ShiftUpLabel": "y",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "y",
          },
        ],
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 10,
        "Row": 3,
        "ShiftDownLabel": "L",
        "ShiftUpLabel": "l",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "l",
          },
        ],
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 3,
        "Row": 4,
        "ShiftDownLabel": "X",
        "ShiftUpLabel": "x",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "x",
          },
        ],
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 11,
        "Label": "^",
        "Row": 3,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "^",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 4,
        "Row": 4,
        "ShiftDownLabel": "C",
        "ShiftUpLabel": "c",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "c",
          },
        ],
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 5,
        "Row": 4,
        "ShiftDownLabel": "V",
        "ShiftUpLabel": "v",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "v",
          },
        ],
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 6,
        "Row": 4,
        "ShiftDownLabel": "B",
        "ShiftUpLabel": "b",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "b",
          },
        ],
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 7,
        "Row": 4,
        "ShiftDownLabel": "N",
        "ShiftUpLabel": "n",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "n",
          },
        ],
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 0,
        "Label": "Win",
        "Row": 5,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Action",
            "value": "LeftWin",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 8,
        "Row": 4,
        "ShiftDownLabel": "M",
        "ShiftUpLabel": "m",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "m",
          },
        ],
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 1,
        "Label": ">",
        "Row": 5,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": ">",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 9,
        "Label": "@",
        "Row": 4,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "@",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 2,
        "Label": ",",
        "Row": 5,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": ",",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 10,
        "Label": "=",
        "Row": 4,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "=",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 3,
        "Label": ".",
        "Row": 5,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": ".",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 11,
        "Label": "#",
        "Row": 4,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "#",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 4,
        "Label": "(",
        "Row": 5,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "(",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 5,
        "Label": ")",
        "Row": 5,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": ")",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 6,
        "Label": "[",
        "Row": 5,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "[",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 7,
        "Label": "]",
        "Row": 5,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "]",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 0,
        "Label": "Ctrl",
        "Row": 6,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Action",
            "value": "LeftCtrl",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 8,
        "Label": "{",
        "Row": 5,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "{",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 1,
        "Label": "Alt",
        "Row": 6,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Action",
            "value": "LeftAlt",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 2,
        "Label": ";",
        "Row": 6,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": ";",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 9,
        "Label": "}",
        "Row": 5,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "}",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 3,
        "Label": ":",
        "Row": 6,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": ":",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 10,
        "Row": 5,
        "Symbol": "UpArrowKeyIcon",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Action",
            "value": "ArrowUp",
          },
        ],
        "labelType": "Symbol",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 11,
        "Label": "Esc",
        "Row": 5,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Action",
            "value": "Escape",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 4,
        "Row": 6,
        "Symbol": "ShiftIcon",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Action",
            "value": "LeftShift",
          },
        ],
        "labelType": "Symbol",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 5,
        "Height": "2",
        "Row": 6,
        "Symbol": "SpaceIcon",
        "Text": "&#32;",
        "Width": "2",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": undefined,
          },
        ],
        "labelType": "Symbol",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 7,
        "Row": 6,
        "Symbol": "EnterIcon",
        "Text": "&#13;",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": undefined,
          },
        ],
        "labelType": "Symbol",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 8,
        "Row": 6,
        "Symbol": "BackOneIcon",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Action",
            "value": "BackOne",
          },
          Object {
            "actionType": "Text",
            "value": "Multi",
          },
          Object {
            "actionType": "Action",
            "value": "BackOne",
          },
        ],
        "labelType": "Symbol",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 9,
        "Label": "A burst with text",
        "Row": 6,
        "associatedKeyGroups": Array [
          "Blue Keys",
        ],
        "keyActions": Array [
          Object {
            "Count": "3",
            "Wait": undefined,
            "actionType": "Loop",
            "keyActions": Array [
              Object {
                "actionType": "KeyDown",
                "value": "a",
              },
              Object {
                "actionType": "Wait",
                "value": "100",
              },
              Object {
                "actionType": "KeyUp",
                "value": "a",
              },
            ],
            "value": undefined,
          },
          Object {
            "actionType": "Text",
            "value": "b",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 10,
        "Label": "BackWithReturnFalse",
        "Row": 6,
        "associatedKeyGroups": Array [
          "Red Keys",
        ],
        "keyActions": Array [
          Object {
            "BackReturnsHere": false,
            "actionType": "ChangeKeyboard",
            "value": "HackerKeyboardSymbols2",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "AutoScaleToOneKeyHeight": "true",
        "AutoScaleToOneKeyWidth": "true",
        "BackgroundColor": "Blue",
        "Col": 11,
        "CompletionTime": "500,500,500",
        "ForegroundColor": "Blue",
        "Height": "1",
        "KeyDisabledBackgroud": "Blue",
        "KeyDisabledForeground": "Blue",
        "KeyDisabledOpacity": "1",
        "KeyDownBackground": "Blue",
        "KeyDownForeground": "Blue",
        "KeyDownOpacity": "1",
        "Label": "BackWithReturnTrue",
        "LockOnTime": "500",
        "Opacity": "1",
        "Row": 6,
        "SharedSizeGroup": "true",
        "UsePersianCompatibilityFont": "true",
        "UseUnicodeCompatibilityFont": "true",
        "UseUrduCompatibilityFont": "true",
        "Width": "1",
        "associatedKeyGroups": Array [
          "Blue Keys",
          "Red Keys",
        ],
        "keyActions": Array [
          Object {
            "BackReturnsHere": true,
            "actionType": "ChangeKeyboard",
            "value": "HackerKeyboardSymbols2",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
    ],
    "DockSize": "Full",
    "Grid": Object {
      "Cols": 12,
      "Rows": 7,
    },
    "Height": 40,
    "HorizontalOffset": 0,
    "Name": "OptiKey-BoardMaker",
    "Position": "Top",
    "SymbolMargin": 1,
    "VerticalOffset": 0,
    "Width": 100,
    "WindowState": "Docked",
    "keyGroups": Array [
      Object {
        "BackgroundColor": "Blue",
        "Name": "Blue Keys",
      },
      Object {
        "BackgroundColor": "Red",
        "Name": "Red Keys",
      },
    ],
  },
}
`;

exports[`parser: js to xml 1`] = `
"<Keyboard>
  <Name>OptiKey-BoardMaker</Name>
  <Height>40</Height>
  <SymbolMargin>1</SymbolMargin>
  <BorderThickness>0,0,0,0</BorderThickness>
  <DockSize>Full</DockSize>
  <Position>Top</Position>
  <Width>100</Width>
  <HorizontalOffset>0</HorizontalOffset>
  <VerticalOffset>0</VerticalOffset>
  <BackgroundColor>Transparent</BackgroundColor>
  <BorderColor>Transparent</BorderColor>
  <WindowState>Docked</WindowState>
  <Grid>
    <Rows>7</Rows>
    <Cols>12</Cols>
  </Grid>
  <Content>
    <DynamicKey Row=\\"0\\" Col=\\"0\\">
      <Label>~</Label>
      <Text>~</Text>
    </DynamicKey>
    <DynamicKey Row=\\"0\\" Col=\\"1\\">
      <Label>1</Label>
      <Text>1</Text>
    </DynamicKey>
    <DynamicKey Row=\\"0\\" Col=\\"2\\">
      <Label>2</Label>
      <Text>2</Text>
    </DynamicKey>
    <DynamicKey Row=\\"0\\" Col=\\"3\\">
      <Label>3</Label>
      <Text>3</Text>
    </DynamicKey>
    <DynamicKey Row=\\"0\\" Col=\\"4\\">
      <Label>4</Label>
      <Text>4</Text>
    </DynamicKey>
    <DynamicKey Row=\\"0\\" Col=\\"5\\">
      <Label>5</Label>
      <Text>5</Text>
    </DynamicKey>
    <DynamicKey Row=\\"0\\" Col=\\"6\\">
      <Label>6</Label>
      <Text>6</Text>
    </DynamicKey>
    <DynamicKey Row=\\"0\\" Col=\\"7\\">
      <Label>7</Label>
      <Text>7</Text>
    </DynamicKey>
    <DynamicKey Row=\\"0\\" Col=\\"8\\">
      <Label>8</Label>
      <Text>8</Text>
    </DynamicKey>
    <DynamicKey Row=\\"0\\" Col=\\"9\\">
      <Label>9</Label>
      <Text>9</Text>
    </DynamicKey>
    <DynamicKey Row=\\"0\\" Col=\\"10\\">
      <Label>0</Label>
      <Text>0</Text>
    </DynamicKey>
    <DynamicKey Row=\\"0\\" Col=\\"11\\">
      <Symbol>MenuIcon</Symbol>
      <Action>MenuKeyboard</Action>
    </DynamicKey>
    <DynamicKey Row=\\"1\\" Col=\\"0\\">
      <Text>undefined</Text>
    </DynamicKey>
    <DynamicKey Row=\\"1\\" Col=\\"1\\">
      <Label>!</Label>
      <Text>!</Text>
    </DynamicKey>
    <DynamicKey Row=\\"1\\" Col=\\"2\\">
      <Label>?</Label>
      <Text>?</Text>
    </DynamicKey>
    <DynamicKey Row=\\"1\\" Col=\\"3\\">
      <Label>+</Label>
      <Text>+</Text>
    </DynamicKey>
    <DynamicKey Row=\\"1\\" Col=\\"4\\">
      <Label>*</Label>
      <Text>*</Text>
    </DynamicKey>
    <DynamicKey Row=\\"1\\" Col=\\"5\\">
      <Label>%</Label>
      <Text>%</Text>
    </DynamicKey>
    <DynamicKey Row=\\"1\\" Col=\\"6\\">
      <Label>&amp;</Label>
      <Text>&amp;</Text>
    </DynamicKey>
    <DynamicKey Row=\\"1\\" Col=\\"7\\">
      <Label>\\"</Label>
      <Text>\\"</Text>
    </DynamicKey>
    <DynamicKey Row=\\"1\\" Col=\\"8\\">
      <Label>'</Label>
      <Text>'</Text>
    </DynamicKey>
    <DynamicKey Row=\\"1\\" Col=\\"9\\">
      <Label>\`</Label>
      <Text>\`</Text>
    </DynamicKey>
    <DynamicKey Row=\\"1\\" Col=\\"10\\">
      <Label>$</Label>
      <Text>$</Text>
    </DynamicKey>
    <DynamicKey Row=\\"2\\" Col=\\"0\\">
      <Label>/</Label>
      <Text>/</Text>
    </DynamicKey>
    <DynamicKey Row=\\"2\\" Col=\\"1\\">
      <ShiftUpLabel>q</ShiftUpLabel>
      <ShiftDownLabel>Q</ShiftDownLabel>
      <Text>q</Text>
    </DynamicKey>
    <DynamicKey Row=\\"2\\" Col=\\"2\\">
      <ShiftUpLabel>w</ShiftUpLabel>
      <ShiftDownLabel>W</ShiftDownLabel>
      <Text>w</Text>
    </DynamicKey>
    <DynamicKey Row=\\"2\\" Col=\\"3\\">
      <ShiftUpLabel>e</ShiftUpLabel>
      <ShiftDownLabel>E</ShiftDownLabel>
      <Text>e</Text>
    </DynamicKey>
    <DynamicKey Row=\\"2\\" Col=\\"4\\">
      <ShiftUpLabel>r</ShiftUpLabel>
      <ShiftDownLabel>R</ShiftDownLabel>
      <Text>r</Text>
    </DynamicKey>
    <DynamicKey Row=\\"2\\" Col=\\"5\\">
      <ShiftUpLabel>t</ShiftUpLabel>
      <ShiftDownLabel>T</ShiftDownLabel>
      <Text>t</Text>
    </DynamicKey>
    <DynamicKey Row=\\"2\\" Col=\\"6\\">
      <ShiftUpLabel>z</ShiftUpLabel>
      <ShiftDownLabel>Z</ShiftDownLabel>
      <Text>z</Text>
    </DynamicKey>
    <DynamicKey Row=\\"2\\" Col=\\"7\\">
      <ShiftUpLabel>u</ShiftUpLabel>
      <ShiftDownLabel>U</ShiftDownLabel>
      <Text>u</Text>
    </DynamicKey>
    <DynamicKey Row=\\"2\\" Col=\\"8\\">
      <ShiftUpLabel>i</ShiftUpLabel>
      <ShiftDownLabel>I</ShiftDownLabel>
      <Text>i</Text>
    </DynamicKey>
    <DynamicKey Row=\\"2\\" Col=\\"9\\">
      <ShiftUpLabel>o</ShiftUpLabel>
      <ShiftDownLabel>O</ShiftDownLabel>
      <Text>o</Text>
    </DynamicKey>
    <DynamicKey Row=\\"2\\" Col=\\"10\\">
      <ShiftUpLabel>p</ShiftUpLabel>
      <ShiftDownLabel>P</ShiftDownLabel>
      <Text>p</Text>
    </DynamicKey>
    <DynamicKey Row=\\"2\\" Col=\\"11\\">
      <Label>|</Label>
      <Text>|</Text>
    </DynamicKey>
    <DynamicKey Row=\\"3\\" Col=\\"0\\">
      <Label>-</Label>
      <Text>-</Text>
    </DynamicKey>
    <DynamicKey Row=\\"3\\" Col=\\"1\\">
      <Label>_</Label>
      <Text>_</Text>
    </DynamicKey>
    <DynamicKey Row=\\"3\\" Col=\\"2\\">
      <ShiftUpLabel>a</ShiftUpLabel>
      <ShiftDownLabel>A</ShiftDownLabel>
      <Text>a</Text>
    </DynamicKey>
    <DynamicKey Row=\\"3\\" Col=\\"3\\">
      <ShiftUpLabel>s</ShiftUpLabel>
      <ShiftDownLabel>S</ShiftDownLabel>
      <Text>s</Text>
    </DynamicKey>
    <DynamicKey Row=\\"3\\" Col=\\"4\\">
      <ShiftUpLabel>d</ShiftUpLabel>
      <ShiftDownLabel>D</ShiftDownLabel>
      <Text>d</Text>
    </DynamicKey>
    <DynamicKey Row=\\"3\\" Col=\\"5\\">
      <ShiftUpLabel>f</ShiftUpLabel>
      <ShiftDownLabel>F</ShiftDownLabel>
      <Text>f</Text>
    </DynamicKey>
    <DynamicKey Row=\\"3\\" Col=\\"6\\">
      <ShiftUpLabel>g</ShiftUpLabel>
      <ShiftDownLabel>G</ShiftDownLabel>
      <Text>g</Text>
    </DynamicKey>
    <DynamicKey Row=\\"3\\" Col=\\"7\\">
      <ShiftUpLabel>h</ShiftUpLabel>
      <ShiftDownLabel>H</ShiftDownLabel>
      <Text>h</Text>
    </DynamicKey>
    <DynamicKey Row=\\"3\\" Col=\\"8\\">
      <ShiftUpLabel>j</ShiftUpLabel>
      <ShiftDownLabel>J</ShiftDownLabel>
      <Text>j</Text>
    </DynamicKey>
    <DynamicKey Row=\\"3\\" Col=\\"9\\">
      <ShiftUpLabel>k</ShiftUpLabel>
      <ShiftDownLabel>K</ShiftDownLabel>
      <Text>k</Text>
    </DynamicKey>
    <DynamicKey Row=\\"3\\" Col=\\"10\\">
      <ShiftUpLabel>l</ShiftUpLabel>
      <ShiftDownLabel>L</ShiftDownLabel>
      <Text>l</Text>
    </DynamicKey>
    <DynamicKey Row=\\"3\\" Col=\\"11\\">
      <Label>^</Label>
      <Text>^</Text>
    </DynamicKey>
    <DynamicKey Row=\\"4\\" Col=\\"0\\">
      <Symbol>TabIcon</Symbol>
      <Text>&#9;</Text>
      <Text>undefined</Text>
    </DynamicKey>
    <DynamicKey Row=\\"4\\" Col=\\"1\\">
      <Label>&lt;</Label>
      <Text>&lt;</Text>
    </DynamicKey>
    <DynamicKey Row=\\"4\\" Col=\\"2\\">
      <ShiftUpLabel>y</ShiftUpLabel>
      <ShiftDownLabel>Y</ShiftDownLabel>
      <Text>y</Text>
    </DynamicKey>
    <DynamicKey Row=\\"4\\" Col=\\"3\\">
      <ShiftUpLabel>x</ShiftUpLabel>
      <ShiftDownLabel>X</ShiftDownLabel>
      <Text>x</Text>
    </DynamicKey>
    <DynamicKey Row=\\"4\\" Col=\\"4\\">
      <ShiftUpLabel>c</ShiftUpLabel>
      <ShiftDownLabel>C</ShiftDownLabel>
      <Text>c</Text>
    </DynamicKey>
    <DynamicKey Row=\\"4\\" Col=\\"5\\">
      <ShiftUpLabel>v</ShiftUpLabel>
      <ShiftDownLabel>V</ShiftDownLabel>
      <Text>v</Text>
    </DynamicKey>
    <DynamicKey Row=\\"4\\" Col=\\"6\\">
      <ShiftUpLabel>b</ShiftUpLabel>
      <ShiftDownLabel>B</ShiftDownLabel>
      <Text>b</Text>
    </DynamicKey>
    <DynamicKey Row=\\"4\\" Col=\\"7\\">
      <ShiftUpLabel>n</ShiftUpLabel>
      <ShiftDownLabel>N</ShiftDownLabel>
      <Text>n</Text>
    </DynamicKey>
    <DynamicKey Row=\\"4\\" Col=\\"8\\">
      <ShiftUpLabel>m</ShiftUpLabel>
      <ShiftDownLabel>M</ShiftDownLabel>
      <Text>m</Text>
    </DynamicKey>
    <DynamicKey Row=\\"4\\" Col=\\"9\\">
      <Label>@</Label>
      <Text>@</Text>
    </DynamicKey>
    <DynamicKey Row=\\"4\\" Col=\\"10\\">
      <Label>=</Label>
      <Text>=</Text>
    </DynamicKey>
    <DynamicKey Row=\\"4\\" Col=\\"11\\">
      <Label>#</Label>
      <Text>#</Text>
    </DynamicKey>
    <DynamicKey Row=\\"5\\" Col=\\"0\\">
      <Label>Win</Label>
      <Action>LeftWin</Action>
    </DynamicKey>
    <DynamicKey Row=\\"5\\" Col=\\"1\\">
      <Label>&gt;</Label>
      <Text>&gt;</Text>
    </DynamicKey>
    <DynamicKey Row=\\"5\\" Col=\\"2\\">
      <Label>,</Label>
      <Text>,</Text>
    </DynamicKey>
    <DynamicKey Row=\\"5\\" Col=\\"3\\">
      <Label>.</Label>
      <Text>.</Text>
    </DynamicKey>
    <DynamicKey Row=\\"5\\" Col=\\"4\\">
      <Label>(</Label>
      <Text>(</Text>
    </DynamicKey>
    <DynamicKey Row=\\"5\\" Col=\\"5\\">
      <Label>)</Label>
      <Text>)</Text>
    </DynamicKey>
    <DynamicKey Row=\\"5\\" Col=\\"6\\">
      <Label>[</Label>
      <Text>[</Text>
    </DynamicKey>
    <DynamicKey Row=\\"5\\" Col=\\"7\\">
      <Label>]</Label>
      <Text>]</Text>
    </DynamicKey>
    <DynamicKey Row=\\"5\\" Col=\\"8\\">
      <Label>{</Label>
      <Text>{</Text>
    </DynamicKey>
    <DynamicKey Row=\\"5\\" Col=\\"9\\">
      <Label>}</Label>
      <Text>}</Text>
    </DynamicKey>
    <DynamicKey Row=\\"5\\" Col=\\"10\\">
      <Symbol>UpArrowKeyIcon</Symbol>
      <Action>ArrowUp</Action>
    </DynamicKey>
    <DynamicKey Row=\\"5\\" Col=\\"11\\">
      <Label>Esc</Label>
      <Action>Escape</Action>
    </DynamicKey>
    <DynamicKey Row=\\"6\\" Col=\\"0\\">
      <Label>Ctrl</Label>
      <Action>LeftCtrl</Action>
    </DynamicKey>
    <DynamicKey Row=\\"6\\" Col=\\"1\\">
      <Label>Alt</Label>
      <Action>LeftAlt</Action>
    </DynamicKey>
    <DynamicKey Row=\\"6\\" Col=\\"2\\">
      <Label>;</Label>
      <Text>;</Text>
    </DynamicKey>
    <DynamicKey Row=\\"6\\" Col=\\"3\\">
      <Label>:</Label>
      <Text>:</Text>
    </DynamicKey>
    <DynamicKey Row=\\"6\\" Col=\\"4\\">
      <Symbol>ShiftIcon</Symbol>
      <Action>LeftShift</Action>
    </DynamicKey>
    <DynamicKey Row=\\"6\\" Col=\\"5\\" Width=\\"2\\" Height=\\"2\\">
      <Symbol>SpaceIcon</Symbol>
      <Text>&#32;</Text>
      <Text>undefined</Text>
    </DynamicKey>
    <DynamicKey Row=\\"6\\" Col=\\"7\\">
      <Symbol>EnterIcon</Symbol>
      <Text>&#13;</Text>
      <Text>undefined</Text>
    </DynamicKey>
    <DynamicKey Row=\\"6\\" Col=\\"8\\">
      <Symbol>BackOneIcon</Symbol>
      <Action>BackOne</Action>
    </DynamicKey>
    <DynamicKey Row=\\"6\\" Col=\\"9\\">
      <Symbol>LeftArrowKeyIcon</Symbol>
      <Action>ArrowLeft</Action>
    </DynamicKey>
    <DynamicKey Row=\\"6\\" Col=\\"10\\">
      <Symbol>DownArrowKeyIcon</Symbol>
      <Action>ArrowDown</Action>
    </DynamicKey>
    <DynamicKey Row=\\"6\\" Col=\\"11\\">
      <Symbol>RightArrowKeyIcon</Symbol>
      <Action>ArrowRight</Action>
    </DynamicKey>
  </Content>
</Keyboard>"
`;

exports[`parser: reduced cols 1`] = `
"<Keyboard>
  <Name>OptiKey-BoardMaker</Name>
  <Height>40</Height>
  <SymbolMargin>1</SymbolMargin>
  <BorderThickness>0,0,0,0</BorderThickness>
  <DockSize>Full</DockSize>
  <Position>Top</Position>
  <Width>100</Width>
  <HorizontalOffset>0</HorizontalOffset>
  <VerticalOffset>0</VerticalOffset>
  <BackgroundColor>Transparent</BackgroundColor>
  <BorderColor>Transparent</BorderColor>
  <WindowState>Docked</WindowState>
  <Grid>
    <Rows>5</Rows>
    <Cols>7</Cols>
  </Grid>
  <Content>
    <DynamicKey Row=\\"0\\" Col=\\"0\\">
      <Label>~</Label>
      <Text>~</Text>
    </DynamicKey>
    <DynamicKey Row=\\"0\\" Col=\\"1\\">
      <Label>1</Label>
      <Text>1</Text>
    </DynamicKey>
    <DynamicKey Row=\\"0\\" Col=\\"2\\">
      <Label>2</Label>
      <Text>2</Text>
    </DynamicKey>
    <DynamicKey Row=\\"0\\" Col=\\"3\\">
      <Label>3</Label>
      <Text>3</Text>
    </DynamicKey>
    <DynamicKey Row=\\"0\\" Col=\\"4\\">
      <Label>4</Label>
      <Text>4</Text>
    </DynamicKey>
    <DynamicKey Row=\\"0\\" Col=\\"5\\">
      <Label>5</Label>
      <Text>5</Text>
    </DynamicKey>
    <DynamicKey Row=\\"0\\" Col=\\"6\\">
      <Label>6</Label>
      <Text>6</Text>
    </DynamicKey>
    <DynamicKey Row=\\"1\\" Col=\\"0\\">
      <Text>undefined</Text>
    </DynamicKey>
    <DynamicKey Row=\\"1\\" Col=\\"1\\">
      <Label>!</Label>
      <Text>!</Text>
    </DynamicKey>
    <DynamicKey Row=\\"1\\" Col=\\"2\\">
      <Label>?</Label>
      <Text>?</Text>
    </DynamicKey>
    <DynamicKey Row=\\"1\\" Col=\\"3\\">
      <Label>+</Label>
      <Text>+</Text>
    </DynamicKey>
    <DynamicKey Row=\\"1\\" Col=\\"4\\">
      <Label>*</Label>
      <Text>*</Text>
    </DynamicKey>
    <DynamicKey Row=\\"1\\" Col=\\"5\\">
      <Label>%</Label>
      <Text>%</Text>
    </DynamicKey>
    <DynamicKey Row=\\"1\\" Col=\\"6\\">
      <Label>&amp;</Label>
      <Text>&amp;</Text>
    </DynamicKey>
    <DynamicKey Row=\\"2\\" Col=\\"0\\">
      <Label>/</Label>
      <Text>/</Text>
    </DynamicKey>
    <DynamicKey Row=\\"2\\" Col=\\"1\\">
      <ShiftUpLabel>q</ShiftUpLabel>
      <ShiftDownLabel>Q</ShiftDownLabel>
      <Text>q</Text>
    </DynamicKey>
    <DynamicKey Row=\\"2\\" Col=\\"2\\">
      <ShiftUpLabel>w</ShiftUpLabel>
      <ShiftDownLabel>W</ShiftDownLabel>
      <Text>w</Text>
    </DynamicKey>
    <DynamicKey Row=\\"2\\" Col=\\"3\\">
      <ShiftUpLabel>e</ShiftUpLabel>
      <ShiftDownLabel>E</ShiftDownLabel>
      <Text>e</Text>
    </DynamicKey>
    <DynamicKey Row=\\"2\\" Col=\\"4\\">
      <ShiftUpLabel>r</ShiftUpLabel>
      <ShiftDownLabel>R</ShiftDownLabel>
      <Text>r</Text>
    </DynamicKey>
    <DynamicKey Row=\\"2\\" Col=\\"5\\">
      <ShiftUpLabel>t</ShiftUpLabel>
      <ShiftDownLabel>T</ShiftDownLabel>
      <Text>t</Text>
    </DynamicKey>
    <DynamicKey Row=\\"2\\" Col=\\"6\\">
      <ShiftUpLabel>z</ShiftUpLabel>
      <ShiftDownLabel>Z</ShiftDownLabel>
      <Text>z</Text>
    </DynamicKey>
    <DynamicKey Row=\\"3\\" Col=\\"0\\">
      <Label>-</Label>
      <Text>-</Text>
    </DynamicKey>
    <DynamicKey Row=\\"3\\" Col=\\"1\\">
      <Label>_</Label>
      <Text>_</Text>
    </DynamicKey>
    <DynamicKey Row=\\"3\\" Col=\\"2\\">
      <ShiftUpLabel>a</ShiftUpLabel>
      <ShiftDownLabel>A</ShiftDownLabel>
      <Text>a</Text>
    </DynamicKey>
    <DynamicKey Row=\\"3\\" Col=\\"3\\">
      <ShiftUpLabel>s</ShiftUpLabel>
      <ShiftDownLabel>S</ShiftDownLabel>
      <Text>s</Text>
    </DynamicKey>
    <DynamicKey Row=\\"3\\" Col=\\"4\\">
      <ShiftUpLabel>d</ShiftUpLabel>
      <ShiftDownLabel>D</ShiftDownLabel>
      <Text>d</Text>
    </DynamicKey>
    <DynamicKey Row=\\"3\\" Col=\\"5\\">
      <ShiftUpLabel>f</ShiftUpLabel>
      <ShiftDownLabel>F</ShiftDownLabel>
      <Text>f</Text>
    </DynamicKey>
    <DynamicKey Row=\\"3\\" Col=\\"6\\">
      <ShiftUpLabel>g</ShiftUpLabel>
      <ShiftDownLabel>G</ShiftDownLabel>
      <Text>g</Text>
    </DynamicKey>
    <DynamicKey Row=\\"4\\" Col=\\"0\\">
      <Symbol>TabIcon</Symbol>
      <Text>&#9;</Text>
      <Text>undefined</Text>
    </DynamicKey>
    <DynamicKey Row=\\"4\\" Col=\\"1\\">
      <Label>&lt;</Label>
      <Text>&lt;</Text>
    </DynamicKey>
    <DynamicKey Row=\\"4\\" Col=\\"2\\">
      <ShiftUpLabel>y</ShiftUpLabel>
      <ShiftDownLabel>Y</ShiftDownLabel>
      <Text>y</Text>
    </DynamicKey>
    <DynamicKey Row=\\"4\\" Col=\\"3\\">
      <ShiftUpLabel>x</ShiftUpLabel>
      <ShiftDownLabel>X</ShiftDownLabel>
      <Text>x</Text>
    </DynamicKey>
    <DynamicKey Row=\\"4\\" Col=\\"4\\">
      <ShiftUpLabel>c</ShiftUpLabel>
      <ShiftDownLabel>C</ShiftDownLabel>
      <Text>c</Text>
    </DynamicKey>
    <DynamicKey Row=\\"4\\" Col=\\"5\\">
      <ShiftUpLabel>v</ShiftUpLabel>
      <ShiftDownLabel>V</ShiftDownLabel>
      <Text>v</Text>
    </DynamicKey>
    <DynamicKey Row=\\"4\\" Col=\\"6\\">
      <ShiftUpLabel>b</ShiftUpLabel>
      <ShiftDownLabel>B</ShiftDownLabel>
      <Text>b</Text>
    </DynamicKey>
  </Content>
</Keyboard>"
`;

exports[`parser: xml to js 1`] = `
Object {
  "Keyboard": Object {
    "BackgroundColor": "Transparent",
    "BorderColor": "Transparent",
    "BorderThickness": "0,0,0,0",
    "Content": Array [
      Object {
        "Col": 0,
        "Label": "~",
        "Row": 0,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "~",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 1,
        "Label": "1",
        "Row": 0,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "1",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 2,
        "Label": "2",
        "Row": 0,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "2",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 3,
        "Label": "3",
        "Row": 0,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "3",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 4,
        "Label": "4",
        "Row": 0,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "4",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 5,
        "Label": "5",
        "Row": 0,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "5",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 6,
        "Label": "6",
        "Row": 0,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "6",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 7,
        "Label": "7",
        "Row": 0,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "7",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 0,
        "Row": 1,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": undefined,
          },
        ],
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 8,
        "Label": "8",
        "Row": 0,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "8",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 1,
        "Label": "!",
        "Row": 1,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "!",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 9,
        "Label": "9",
        "Row": 0,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "9",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 2,
        "Label": "?",
        "Row": 1,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "?",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 10,
        "Label": "0",
        "Row": 0,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "0",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 3,
        "Label": "+",
        "Row": 1,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "+",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 4,
        "Label": "*",
        "Row": 1,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "*",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 11,
        "Row": 0,
        "Symbol": "MenuIcon",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Action",
            "value": "MenuKeyboard",
          },
        ],
        "labelType": "Symbol",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 5,
        "Label": "%",
        "Row": 1,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "%",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 6,
        "Label": "&",
        "Row": 1,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "&",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 0,
        "Label": "/",
        "Row": 2,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "/",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 7,
        "Label": "\\"",
        "Row": 1,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "\\"",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 1,
        "Row": 2,
        "ShiftDownLabel": "Q",
        "ShiftUpLabel": "q",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "q",
          },
        ],
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 8,
        "Label": "'",
        "Row": 1,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "'",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 2,
        "Row": 2,
        "ShiftDownLabel": "W",
        "ShiftUpLabel": "w",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "w",
          },
        ],
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 9,
        "Label": "\`",
        "Row": 1,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "\`",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 10,
        "Label": "$",
        "Row": 1,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "$",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 3,
        "Row": 2,
        "ShiftDownLabel": "E",
        "ShiftUpLabel": "e",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "e",
          },
        ],
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 4,
        "Row": 2,
        "ShiftDownLabel": "R",
        "ShiftUpLabel": "r",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "r",
          },
        ],
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 5,
        "Row": 2,
        "ShiftDownLabel": "T",
        "ShiftUpLabel": "t",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "t",
          },
        ],
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 6,
        "Row": 2,
        "ShiftDownLabel": "Z",
        "ShiftUpLabel": "z",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "z",
          },
        ],
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 0,
        "Label": "-",
        "Row": 3,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "-",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 7,
        "Row": 2,
        "ShiftDownLabel": "U",
        "ShiftUpLabel": "u",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "u",
          },
        ],
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 1,
        "Label": "_",
        "Row": 3,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "_",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 8,
        "Row": 2,
        "ShiftDownLabel": "I",
        "ShiftUpLabel": "i",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "i",
          },
        ],
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 2,
        "Row": 3,
        "ShiftDownLabel": "A",
        "ShiftUpLabel": "a",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "a",
          },
        ],
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 9,
        "Row": 2,
        "ShiftDownLabel": "O",
        "ShiftUpLabel": "o",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "o",
          },
        ],
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 10,
        "Row": 2,
        "ShiftDownLabel": "P",
        "ShiftUpLabel": "p",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "p",
          },
        ],
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 3,
        "Row": 3,
        "ShiftDownLabel": "S",
        "ShiftUpLabel": "s",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "s",
          },
        ],
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 11,
        "Label": "|",
        "Row": 2,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "|",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 4,
        "Row": 3,
        "ShiftDownLabel": "D",
        "ShiftUpLabel": "d",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "d",
          },
        ],
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 5,
        "Row": 3,
        "ShiftDownLabel": "F",
        "ShiftUpLabel": "f",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "f",
          },
        ],
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 6,
        "Row": 3,
        "ShiftDownLabel": "G",
        "ShiftUpLabel": "g",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "g",
          },
        ],
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 7,
        "Row": 3,
        "ShiftDownLabel": "H",
        "ShiftUpLabel": "h",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "h",
          },
        ],
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 0,
        "Row": 4,
        "Symbol": "TabIcon",
        "Text": "&#9;",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": undefined,
          },
        ],
        "labelType": "Symbol",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 8,
        "Row": 3,
        "ShiftDownLabel": "J",
        "ShiftUpLabel": "j",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "j",
          },
        ],
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 1,
        "Label": "<",
        "Row": 4,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "<",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 9,
        "Row": 3,
        "ShiftDownLabel": "K",
        "ShiftUpLabel": "k",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "k",
          },
        ],
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 2,
        "Row": 4,
        "ShiftDownLabel": "Y",
        "ShiftUpLabel": "y",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "y",
          },
        ],
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 10,
        "Row": 3,
        "ShiftDownLabel": "L",
        "ShiftUpLabel": "l",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "l",
          },
        ],
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 3,
        "Row": 4,
        "ShiftDownLabel": "X",
        "ShiftUpLabel": "x",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "x",
          },
        ],
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 11,
        "Label": "^",
        "Row": 3,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "^",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 4,
        "Row": 4,
        "ShiftDownLabel": "C",
        "ShiftUpLabel": "c",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "c",
          },
        ],
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 5,
        "Row": 4,
        "ShiftDownLabel": "V",
        "ShiftUpLabel": "v",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "v",
          },
        ],
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 6,
        "Row": 4,
        "ShiftDownLabel": "B",
        "ShiftUpLabel": "b",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "b",
          },
        ],
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 7,
        "Row": 4,
        "ShiftDownLabel": "N",
        "ShiftUpLabel": "n",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "n",
          },
        ],
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 0,
        "Label": "Win",
        "Row": 5,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Action",
            "value": "LeftWin",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 8,
        "Row": 4,
        "ShiftDownLabel": "M",
        "ShiftUpLabel": "m",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "m",
          },
        ],
        "labelType": "Case Sensitive Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 1,
        "Label": ">",
        "Row": 5,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": ">",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 9,
        "Label": "@",
        "Row": 4,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "@",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 2,
        "Label": ",",
        "Row": 5,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": ",",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 10,
        "Label": "=",
        "Row": 4,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "=",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 3,
        "Label": ".",
        "Row": 5,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": ".",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 11,
        "Label": "#",
        "Row": 4,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "#",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 4,
        "Label": "(",
        "Row": 5,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "(",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 5,
        "Label": ")",
        "Row": 5,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": ")",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 6,
        "Label": "[",
        "Row": 5,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "[",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 7,
        "Label": "]",
        "Row": 5,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "]",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 0,
        "Label": "Ctrl",
        "Row": 6,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Action",
            "value": "LeftCtrl",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 8,
        "Label": "{",
        "Row": 5,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "{",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 1,
        "Label": "Alt",
        "Row": 6,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Action",
            "value": "LeftAlt",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 2,
        "Label": ";",
        "Row": 6,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": ";",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 9,
        "Label": "}",
        "Row": 5,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": "}",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 3,
        "Label": ":",
        "Row": 6,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": ":",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 10,
        "Row": 5,
        "Symbol": "UpArrowKeyIcon",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Action",
            "value": "ArrowUp",
          },
        ],
        "labelType": "Symbol",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 11,
        "Label": "Esc",
        "Row": 5,
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Action",
            "value": "Escape",
          },
        ],
        "labelType": "Text",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 4,
        "Row": 6,
        "Symbol": "ShiftIcon",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Action",
            "value": "LeftShift",
          },
        ],
        "labelType": "Symbol",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 5,
        "Height": "2",
        "Row": 6,
        "Symbol": "SpaceIcon",
        "Text": "&#32;",
        "Width": "2",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": undefined,
          },
        ],
        "labelType": "Symbol",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 7,
        "Row": 6,
        "Symbol": "EnterIcon",
        "Text": "&#13;",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Text",
            "value": undefined,
          },
        ],
        "labelType": "Symbol",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 8,
        "Row": 6,
        "Symbol": "BackOneIcon",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Action",
            "value": "BackOne",
          },
        ],
        "labelType": "Symbol",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 9,
        "Row": 6,
        "Symbol": "LeftArrowKeyIcon",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Action",
            "value": "ArrowLeft",
          },
        ],
        "labelType": "Symbol",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 10,
        "Row": 6,
        "Symbol": "DownArrowKeyIcon",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Action",
            "value": "ArrowDown",
          },
        ],
        "labelType": "Symbol",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
      Object {
        "Col": 11,
        "Row": 6,
        "Symbol": "RightArrowKeyIcon",
        "associatedKeyGroups": Array [],
        "keyActions": Array [
          Object {
            "actionType": "Action",
            "value": "ArrowRight",
          },
        ],
        "labelType": "Symbol",
        "name": "DynamicKey",
        "type": "DynamicKey",
      },
    ],
    "DockSize": "Full",
    "Grid": Object {
      "Cols": 12,
      "Rows": 7,
    },
    "Height": 40,
    "HorizontalOffset": 0,
    "Name": "OptiKey-BoardMaker",
    "Position": "Top",
    "SymbolMargin": 1,
    "VerticalOffset": 0,
    "Width": 100,
    "WindowState": "Docked",
    "keyGroups": Array [],
  },
}
`;
